# run

./: .gitignore  .gitmodules  COMMIT_MSG.txt  Cargo.toml  LICENSE  README.md  Runfile  book.toml  test.run
.cargo-husky/hooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-docs.yml  deploy.yml  release.yml
completions/: README.md  run.bash  run.fish  run.zsh
docs/: AUDIT_FINDINGS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE5_PLAN.md  QUALITY_CHECKLIST.md  SUMMARY.md  arguments.md  attributes-and-interpreters.md  cli.md  command-composition.md  faq.md  getting-started.md  index.md  legacy-notation-analysis.md  mcp.md  polyglot-commands.md  recipes.md  reference.md  runfile-syntax.md  variables.md
docs/learnings/: backward-compatible-feature-addition.md  borrow-checker-mutable-state-patterns.md  clone-optimization-analysis.md  code-quality-improvement-guide.md  dry-refactoring-patterns.md  workspace-restructuring-dual-package.md
docs/specs/: RFC001-interpreter-attributes-and-platform-guarding.md  RFC002-shebang-detection.md  RFC003-ai-agent-support-and-mcp.md  RFC004-function-signature-notation.md  RFC005-recursive-composable-runfile-functions.md  RFC006-implementation-example.md  RFC006-runfile-parse-caching.md  RFC006-structured-output-for-mcp.md  interpreter-attributes-and-platform-guarding.md
run/: Cargo.toml  README.md
run/completions/: README.md  run.bash  run.fish  run.ps1  run.zsh
run/docs/: arguments.md  attributes-and-interpreters.md  bash-differences.md  cli.md  index.md  mcp.md  polyglot-commands.md  recipes.md  variables.md
run/src/: ast.rs  cli.rs  completion.rs  config.rs  executor.rs  grammar.pest  lib.rs  main.rs  output_file.rs  repl.rs  transpiler.rs  utils.rs
run/src/interpreter/: execution.rs  mod.rs  preamble.rs  shell.rs
run/src/mcp/: handlers.rs  mapping.rs  mod.rs  tools.rs
run/src/parser/: attributes.rs  block.rs  error.rs  mod.rs  shebang.rs
run/tests/: attributes.rs  basic_functions.rs  cli.rs  composition_test.rs  errexit_test.rs  function_signature.rs  integration_test.rs  mcp_server_test.rs  mcp_tool_schema_test.rs  polyglot.rs  rfc003_mcp_test.rs  rfc004_mcp_integration.rs  rfc005_composition_test.rs  rfc006_structured_output_test.rs  source_test.rs  structured_output_test.rs
run/tests/common/: mod.rs
runtool/: Cargo.toml  README.md
runtool/src/: main.rs
scripts/: deploy.sh  update_aur.sh  update_homebrew.sh  update_scoop.sh
src/: ast.rs  completion.rs  config.rs  executor.rs  grammar.pest  interpreter.rs  lib.rs  main.rs  mcp.rs  parser.rs  repl.rs  transpiler.rs
src/interpreter/: mod.rs  preamble.rs  shell.rs
src/mcp/: handlers.rs  mapping.rs  mod.rs  tools.rs
src/parser/: attributes.rs  mod.rs  preprocessing.rs
tests/: basic_functions.rs  integration_test.rs  polyglot.rs  rfc003_mcp_test.rs  rfc005_composition_test.rs
