[workspace]
resolver = "2"
members = [
    "run",
    "runtool",
]
[workspace.package]
version = "0.3.21"
edition = "2024"
authors = ["nihilok nihilok@jarv.dev", "sebastian <s@porto5.com>"]
license = "MIT"
repository = "https://github.com/nihilok/run"
[workspace.dependencies]
pest = "2.8.5"
pest_derive = "2.8.5"
clap = { version = "4.5", features = ["derive"] }
which = "8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.24"
regex = "1.12"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
