[package]
name = "runtool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "a.k.a. run: the bridge between human and AI tooling"
license.workspace = true
repository.workspace = true
[dependencies]
run = { path = "../run", version = "0.3.11" }
[lints]
workspace = true
[[bin]]
name = "run"
path = "src/main.rs"
